# rox

./: mix.exs
bench/: rox_bench.exs
lib/: rox.ex
lib/rox/: batch.ex  column_family.ex  cursor.ex  db.ex  db_options.ex  native.ex  snapshot.ex  utils.ex
native/rox_nif/: Cargo.toml
native/rox_nif/src/: lib.rs
test/: rox_test.exs  utils_test.exs
test/rox/: batch_test.exs
